<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_taskBoard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/taskBoard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_assignTask"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/assignTask" />
        <item
            android:id="@+id/nav_newsEvents"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/newsEvents" />
        <item
            android:id="@+id/nav_employeeInfo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/employeeInfo" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/help" />

    </group>



</menu>
